<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="rename">RENAME</string>
    <string name="rack_name">RACK NAME</string>
    <string name="new_rack">NEW</string>
    <string name="rack">RACK</string>
    <string name="init">INIT</string>
    <string name="edit_name">edit name</string>
    <string name="edit_color">edit color</string>
    <string name="midi_config">MIDI CONFIG</string>
    <string name="add_kontroller">ADD COMPONENT</string>
    <string name="delete_rack">delete rack</string>
    <string name="rack_color">RACK COLOR</string>
    <string name="background">BACKGROUND</string>
    <string name="foreground">FOREGROUND</string>
    <string name="configs">BACK</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="delete_component">Are you sure you want to delete this component? any changes made and unsaved will be lost</string>
    <string name="new_potentiometer">NEW POTENTIOMETER</string>
    <string name="new_button">NEW BUTTON</string>
</resources>