<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="horizontal">


    <com.firmino.racks.interfaceitems.SquareRackButton
        android:id="@+id/Rack_Config_Title_Back"
        android:layout_marginEnd="10dp"
        android:layout_weight=".25"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rack_square_button"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/configs"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:drawableStart="@drawable/ic_back"
        android:paddingStart="6dp"
        android:paddingEnd="10dp"
        android:textSize="12sp"
        tools:ignore="ButtonStyle" />

    <LinearLayout
        android:layout_weight=".5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rack_square_button_pressed"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:importantForAutofill="no"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/rack_name"
            android:textColor="@color/bg_gray"
            app:drawableStartCompat="@drawable/ic_edit"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <EditText
        android:id="@+id/Rack_Config_Title_Text"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rack_square_button_pressed"
        android:cursorVisible="false"
        android:fontFamily="sans-serif-condensed-medium"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:maxLength="24"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="12sp"
        android:textColor="@color/bg_gray"
        tools:ignore="LabelFor" />

    <com.firmino.racks.interfaceitems.SquareRackButton
        android:id="@+id/Rack_Config_Title_Ok"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rack_square_button"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/rename"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="12sp"
        tools:ignore="ButtonStyle" />

</LinearLayout>