<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <com.firmino.racks.interfaceitems.SquareRackButton
        android:id="@+id/Rack_Config_Colors_Back"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_weight=".25"
        android:background="@drawable/bg_rack_square_button"
        android:drawableStart="@drawable/ic_back"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:paddingStart="6dp"
        android:paddingEnd="10dp"
        android:text="@string/configs"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        tools:ignore="ButtonStyle" />

    <LinearLayout
        android:layout_weight=".5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_rack_square_button_pressed"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:importantForAutofill="no"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/rack_color"
            android:textColor="@color/bg_gray"
            app:drawableStartCompat="@drawable/ic_edit_color"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_rack_dialog"
        android:backgroundTint="@android:color/black"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:background="@drawable/bg_rack_button_left_borderless"
            android:backgroundTint="#45351b"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/background"
            android:textColor="@color/foreground"
            android:textSize="12sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scrollbars="none">

                <include layout="@layout/layout_rack_background_colors" />
            </HorizontalScrollView>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:src="@drawable/bg_rack_horizontal_scroll_fade_out"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/bg_rack_horizontal_scroll_fade_in"
                tools:ignore="ContentDescription" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rack_dialog"
        android:backgroundTint="@android:color/black"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:background="@drawable/bg_rack_button_left_borderless"
            android:backgroundTint="#45351b"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/foreground"
            android:textColor="@color/foreground"
            android:textSize="12sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scrollbars="none">

                <include layout="@layout/layout_rack_foreground_colors" />
            </HorizontalScrollView>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:src="@drawable/bg_rack_horizontal_scroll_fade_out"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/bg_rack_horizontal_scroll_fade_in"
                tools:ignore="ContentDescription" />

        </FrameLayout>

    </LinearLayout>


</LinearLayout>